name: fanfiction
version: 0.1
license: MIT
license-file: LICENSE
author: Julian Blake Kongslie
maintainer: jblake@omgwallhack.org
build-type: Simple
cabal-version: >=1.8

executable ff
 main-is: TagTool.hs
 build-depends: attoparsec, base, bytestring, directory, deepseq, cairo, explicit-exception, HDBC, HDBC-postgresql, HDBC-sqlite3, HTTP, iconv, network, old-locale, pango, regex-posix, safe, strict-concurrency, tagsoup, temporary, text, time, transformers, unix, utf8-string, xml, zip-archive
 ghc-options: -threaded
 hs-source-dirs: src

executable webtag
 main-is: Webtag.hs
 build-depends: base, cgi, directory, fastcgi, filepath, HDBC, HDBC-postgresql, json, mtl, split, unix
 hs-source-dirs: src
