name: fanfiction
version: 0.1
license: MIT
license-file: LICENSE
author: Julian Blake Kongslie
maintainer: jblake@omgwallhack.org
build-type: Simple
cabal-version: >=1.8

executable ff
 main-is: Main.hs
 build-depends: base, cmdargs, datetime, directory, HDBC, HDBC-postgresql, HDBC-sqlite3, hxt, hxt-cache, hxt-http, regex-posix, unix
 hs-source-dirs: src
 ghc-options: -threaded
