name: webtag
version: 0.1

author: Julian Blake Kongslie
build-type: Simple
cabal-version: >=1.2
category: Web
license-file: LICENSE
license: BSD3
maintainer: jblake@omgwallhack.org

executable webtag
  build-depends: base, cgi, directory, fastcgi, HDBC, HDBC-sqlite3, json, mtl, split
  extensions: DeriveDataTypeable, NamedFieldPuns, RecordWildCards
  ghc-options: -Wall
  main-is: Main.hs
